modified client style

--- a/SGISite/res/public/index.html
+++ b/SGISite/res/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     <link rel="stylesheet" href="lib/css/text-buble.css">
-    <!--<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">-->
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <!-- MATERIALIZED CSS-->
 
     <!-- ANIMATE CSS-->
@@ -94,7 +94,7 @@
                                 </div>
                                 <!-- SENSOR MODAL PANEL -->
 
-                                <div id="sensorModal" class="modal fade bs-example-modal-lg" tabindex="-1" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="position: absolute; z-index: 5; width: 320px;overflow: visible">
+                                <div id="sensorModal" class="modal bs-example-modal-lg" tabindex="-1" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="position: absolute; z-index: 5; width: 320px;overflow: visible">
                                     <div class="modal-dialog modal-lg" style="position: absolute;margin-top: 32px; margin-left: 108px;">
                                         <div class="modal-content triangle-isosceles left" style="width: 304px;min-height: 363px;">
 
