--- a/site/app/elements/tafat-body/tafat-body.html
+++ b/site/app/elements/tafat-body/tafat-body.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="tafat-header.html">
 <link rel="import" href="heatmap-component.html">
 <link rel="import" href="chart-component.html">
+<link rel="import" href="simulation-controller.html">
 
 <dom-module id="tafat-body">
     <style>
@@ -29,8 +29,7 @@
         }
     </style>
     <template>
-        <cotton-header title="[[title]]" logo="[[logo]]"
-                       _user='{"name": "Jose Evora", "photo":"http://lorempixel.com/64/64/people"}'>
+        <cotton-header title="[[title]]" logo="[[logo]]">
             <simulation-controller></simulation-controller>
         </cotton-header>
         <iron-pages selected="{{selected}}">
@@ -63,32 +62,32 @@
             },
 
             _loadConfiguration: function () {
-                $.get("/interfaceConfiguration", function (data) {
+                $.get('/interfaceConfiguration', function (data) {
                     var configuration = JSON.parse(data);
                     document.title = configuration.title;
                     this.querySelector('cotton-header').title = configuration.title;
-                    this.querySelector('cotton-header').logo = "data:image/png;base64," + configuration.logo;
-                    $("#time").text(configuration.time);
-                    $("#favicon").attr("href", "data:image/png;base64," + configuration.logo);
+                    this.querySelector('cotton-header').logo = 'data:image/png;base64,' + configuration.logo;
+                    $('#time').text(configuration.time);
+                    $('#favicon').attr('href', 'data:image/png;base64,' + configuration.logo);
                     this._process(configuration.components);
                 }.bind(this));
             },
 
             _initToolbar: function () {
                 document.addEventListener('play-simulation', function () {
-                    $.get("/play", function (data) {
-                        if (data === "OK")
+                    $.get('/play', function (data) {
+                        if (data === 'OK')
                             this.interval = setInterval(this._reload.bind(this), 100);
                     }.bind(this));
                 }.bind(this));
                 document.addEventListener('pause-simulation', function () {
-                    $.get("/pause", function (data) {
-                        if (data === "OK") clearInterval(this.interval);
+                    $.get('/pause', function (data) {
+                        if (data === 'OK') clearInterval(this.interval);
                     });
                 });
                 document.addEventListener('replay', function () {
-                    $.get("/reset", function (data) {
-                        if (data === "OK") clearInterval(this.interval);
+                    $.get('/reset', function (data) {
+                        if (data === 'OK') clearInterval(this.interval);
                         this._loadConfiguration();
                     }.bind(this));
                 }.bind(this));
@@ -102,7 +101,7 @@
             },
 
             _reload: function () {
-                $.get("/values", function (input) {
+                $.get('/values', function (input) {
                     var data = JSON.parse(input);
                     this.querySelector('simulation-controller').updateTime(data.time);
                     data.values.forEach(function(component){
@@ -111,15 +110,15 @@
                             return child.isNamedAs && child.isNamedAs(component.title);
                         }).forEach(function (child){
                             child.refresh(component);
-                        })
+                        });
                     }.bind(this));
                 }.bind(this));
             },
             _isHeatmap: function (type) {
-                return type === "heatmap";
+                return type === 'heatmap';
             },
             _isChart: function (type) {
-                return type === "chart";
+                return type === 'chart';
             }
         });
     </script>
