--- a/site/app/index.html
+++ b/site/app/index.html
@@ -9,8 +9,8 @@
 	<link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96">
 	<link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
 
-	<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-	<link rel="import" href="elements/elements.html">
+	<script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+	<link rel="import" href="/elements/elements.html">
 
 </head>
 
