--- a/site/app/elements/tafat-body/chart-component.html
+++ b/site/app/elements/tafat-body/chart-component.html
@@ -15,7 +15,7 @@
 
         Polymer({
             is: 'chart-component',
-            behaviors: [TafatBehaviors.IsNamedBehavior/*, Polymer.IronResizableBehavior*/],
+            behaviors: [TafatBehaviors.IsNamedBehavior, Polymer.IronResizableBehavior],
 
             properties: {
                 chart: {
