--- a/site/app/elements/tafat-body/is-named.html
+++ b/site/app/elements/tafat-body/is-named.html
@@ -9,7 +9,7 @@
         },
 
         isNamedAs: function (name) {
-            return this.id === name;
+            return name === this.id;
         }
     };
 </script>
