--- a/site/app/elements/tafat-body/simulation-controller.html
+++ b/site/app/elements/tafat-body/simulation-controller.html
@@ -11,6 +11,7 @@
             width: 280px;
             height: 30px;
             border: solid grey 1px;
+            background-color: white;
             @apply(--layout-horizontal);
             @apply(--layout-center);
         }
