--- a/site/app/elements/tafat-body/heatmap-component.html
+++ b/site/app/elements/tafat-body/heatmap-component.html
@@ -16,6 +16,11 @@
           height: auto;
         }
 
+        div {
+            display: inline-block;
+            position: relative;
+        }
+
         div.region {
             position: absolute;
             opacity: 0
@@ -23,17 +28,19 @@
 
     </style>
     <template>
-      <img id="background" src="[[_image]]" on-load="_imageLoaded"/>
-      <template is="dom-repeat" items="{{_regions}}">
-          <div class="region" id={{item.id}} style$="
-              top: {{item.top}}%;
-              left: {{item.left}}%;
-              height: {{item.height}}%;
-              width: {{item.width}}%;
-              background-color: {{heatmap.color}};
-              z-index: {{item.zIndex}};
-              border-radius: {{_setRadius(item.type)}}"></div>
-      </template>
+        <div>
+          <img id="background" src="[[_image]]" on-load="_imageLoaded"/>
+          <template is="dom-repeat" items="{{_regions}}">
+              <div class="region" id={{item.id}} style$="
+                  top: {{item.top}}%;
+                  left: {{item.left}}%;
+                  height: {{item.height}}%;
+                  width: {{item.width}}%;
+                  background-color: {{heatmap.color}};
+                  z-index: {{item.zIndex}};
+                  border-radius: {{_setRadius(item.type)}}"></div>
+          </template>
+        </div>
     </template>
     <script>
 
@@ -77,12 +84,15 @@
                 if (this._regionsLoaded) return;
                 var ratio = this.$.background.height / this.$.background.naturalHeight;
                 this.heatmap.regions.forEach(function (region) {
-                    region.top = (this.$.background.offsetTop + region.top * ratio) * 100 / this.offsetHeight;
-                    region.left = (this.$.background.offsetLeft + region.left * ratio) * 100 / this.offsetWidth;
-                    region.height = (region.height * ratio) * 100 / this.offsetHeight;
-                    region.width = (region.width * ratio) * 100 / this.offsetWidth;
+                    region.top = (this.$.background.offsetTop + region.top * ratio) * 100 / this.$.background.offsetHeight;
+                    region.left = (this.$.background.offsetLeft + region.left * ratio) * 100 / this.$.background.offsetWidth;
+                    region.height = (region.height * ratio) * 100 / this.$.background.offsetHeight;
+                    region.width = (region.width * ratio) * 100 / this.$.background.offsetWidth;
                 }.bind(this));
                 this._regionsLoaded = true;
+                if (this.offsetHeight >= this.parentElement.offsetHeight) {
+                    this.$.background.style.height = this.parentElement.offsetHeight + 'px';
+                }
                 this._regions = this.heatmap.regions;
             },
 
@@ -93,36 +103,37 @@
             },
 
             _processValues: function (regions) {
-                var min = this._calculateMin(regions);
-                var max = this._calculateMax(regions);
+                var values = regions.map(region => region.value);
+                var min = Math.min.apply(null, values);
+                var max = Math.max.apply(null, values);
+                if(max - min > 10){
+                    var filteredValues = this._filterOutliers(values);
+                    min = Math.min.apply(null, filteredValues);
+                    max = Math.max.apply(null, filteredValues);
+                }
                 for (var i = 0; i < regions.length; i++)
                     this.querySelector('#' + regions[i].id).style.opacity = this._shadeOf(regions[i].value, max, min);
             },
 
-            _calculateMin: function (data) {
-                var min = Number.MAX_VALUE;
-                for (var i = 0; i < data.length; i++)
-                    min = Math.min(data[i].value, min);
-                return min;
-            },
-
-            _calculateMax: function (data) {
-                var max = 0;
-                for (var i = 0; i < data.length; i++) {
-                    //if (i == 10) continue; //TODO remove outlayers http://stackoverflow.com/questions/20811131/javascript-remove-outlier-from-an-array
-                    max = Math.max(data[i].value, max);
-                }
-                if (max === 0) max = 1;
-                return max;
+            _filterOutliers: function (array) {
+                var values = array.concat();
+                values.sort((a, b) => a - b);
+                var q1 = values[Math.floor((values.length / 4))];
+                var q3 = values[Math.ceil((values.length * (3 / 4)))];
+                var iqr = q3 - q1;
+                var maxValue = q3 + iqr* 3;
+                var minValue = q1 - iqr* 3;
+                return values.filter(x => (x < maxValue) && (x > minValue));
             },
 
             _shadeOf: function (value, max, min) {
+                if(max === min) return 0.2;
                 var result = (0.6 * (value - min) / (max - min)) + 0.2;
                 return result > 0.8 ? 0.8 : result;
             },
 
             _setRadius: function (regionType) {
-                return regionType === 'square' ? 0 : 50;
+                return regionType === 'square' ? '0%' : '50%';
             }
         })
         ;
