--- a/site/app/elements/tafat-body/tafat-body.html
+++ b/site/app/elements/tafat-body/tafat-body.html
@@ -22,6 +22,23 @@
         chart-component {
             height: 100%;
         }
+
+        simulation-controller{
+            z-index: 1000;
+        }
+
+        iron-pages > * {
+            @apply(--layout-horizontal);
+            @apply(--layout-center);
+            @apply(--layout-center-justified);
+        }
+
+        cotton-footer{
+            --footer-text: {
+                font-size: 10pt;
+            };
+        }
+
     </style>
     <template>
         <cotton-header title="[[title]]" logo="[[logo]]">
@@ -37,7 +54,7 @@
                 </template>
             </template>
         </iron-pages>
-        <cotton-footer tabs='[[tabs]]' selected-tab="{{selected}}"></cotton-footer>
+        <cotton-footer tabs='[[tabs]]' selected-tab="{{selected}}" powered-by="Tafat"></cotton-footer>
     </template>
     <script>
         Polymer({
